Filled out TNN section

--- a/Projects.json
+++ b/Projects.json
@@ -38,7 +38,7 @@
       {
         "Total Neonatal Nutrition": {
           "href": "/NeonatalNutritiondetails.html",
-          "src": "assets/img/LogoHeart2.png",
+          "src": "assets/img/TNNThumb.png",
           "p": "Neonatal Tracking System"
         }
       }
