changed drop downs to phase in an not slide

--- a/Projects.json
+++ b/Projects.json
@@ -18,7 +18,7 @@
         "Personal Portfolio": {
          "href": "/WebDesigndetails.html",
           "src": "assets/img/PortfolioSmaller.gif",
-          "p": "Cross-Platform App"
+          "p": "The site you're on now!"
         }
       },
       {
