--- a/Projects.json
+++ b/Projects.json
@@ -2,42 +2,42 @@
     "projects": [
       {
         "Drug Interactions": {
-          "href": "/DrugInteracionsdetails.html",
+          "href": "DrugInteracionsdetails.html",
           "src": "assets/img/DrugInteractiondemoClip.gif",
           "p": "SMART on FHIR App"
         }
       },
       {
         "Clinical Compounding": {
-          "href": "/Compoundingdetails.html",
+          "href": "Compoundingdetails.html",
           "src": "assets/img/PolicyScrollUnitChange.gif",
           "p": "Cross-Platform App"
         }
       },
       {
         "Personal Portfolio": {
-         "href": "/WebDesigndetails.html",
+         "href": "WebDesigndetails.html",
           "src": "assets/img/PortfolioSmaller.gif",
           "p": "The site you're on now!"
         }
       },
       {
         "DrugInteractionAPI": {
-          "href": "/APIdetails.html",
+          "href": "APIdetails.html",
           "src": "assets/img/DrugInteractionAPI.png",
           "p": "Open-Source NuGet Package"
         }
       },
       {
         "Health Research": {
-          "href": "/Researchdetails.html",
+          "href": "Researchdetails.html",
           "src": "assets/img/SSBPosterJamesBock05052016thumb.png",
           "p": "with robust statistical analysis"
         }
       },
       {
         "Total Neonatal Nutrition": {
-          "href": "/NeonatalNutritiondetails.html",
+          "href": "NeonatalNutritiondetails.html",
           "src": "assets/img/TNNThumb.png",
           "p": "Neonatal Tracking System"
         }
