added open austin

--- a/Projects.json
+++ b/Projects.json
@@ -41,6 +41,13 @@
           "src": "assets/img/TNNThumb.png",
           "p": "Neonatal Tracking System"
         }
+      },
+      {
+        "BASTA/Open Austin": {
+          "href": "BastaOpenAustin.html",
+          "src": "assets/img/open-austin-logo.svg",
+          "p": "Tenant-File Web Application"
+        }
       }
     ]
   }
