Add more icons fixed null topbar error minor edits

--- a/Projects.json
+++ b/Projects.json
@@ -1,7 +1,7 @@
 {
   "projects": [
     {
-      "Drug Interactions": {
+      "FHIRScan": {
         "href": "DrugInteracionsdetails.html",
         "src": "assets/img/FhirScanDemoMed.gif",
         "p": "Cloud Web App",
